reated logic to handle the truncated pagination of a limitedPageNumber set of data from the full post list.  Added an li of system icon ellipsis that is not yet fully funcitonal.  Created an li for last page that is functional to get to the correct spot but still need to make its appearance conditional on the need for additional pages

--- a/src/components/pagination/pagination.less
+++ b/src/components/pagination/pagination.less
@@ -3,7 +3,9 @@
 .ce-pagination {
   button {
     border: none;
-    text-decoration: none;
+    outline: none;
+    // text-decoration: none;
+    cursor: pointer;
     background-color: @white;
   }
   .ce-pagination__oval-container {
@@ -57,6 +59,10 @@
           color: @white;
         }
       }
+    }
+
+    .ce-pagination__last-page {
+      color: black;
     }
   }
 
